--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^11.0.6",
     "next": "^13.5.6",
+    "nodemailer": "^6.9.11",
     "openai": "^4.28.4",
     "postcss": "^8.4.35",
     "react": "18.2.0",
