--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "mysql2": "^3.9.2",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.11",
@@ -27,5 +28,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.10.2"
   }
 }
