--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "@vercel/postgres": "^0.7.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.7",
     "eslint": "8.42.0",
