--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "openai": "^4.28.4",
     "postcss": "^8.4.35",
     "react": "18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
